# errno_converter

./: .gitignore  .pre-commit-config.yaml  README.md  converter_lib.py  errno_converter.py  http_converter.py  pyproject.toml  signal_converter.py
src/: converter_lib.py  errno_converter.py  http_converter.py  signal_converter.py
src/errno_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lib/: converter.py  parser.py
